--- a/Oleg/main/res/layout/activity_main.xml
+++ b/Oleg/main/res/layout/activity_main.xml
@@ -41,4 +41,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="18dp"
         android:textSize="50dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to relax!"
+        android:id="@+id/btnRelax"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
 </RelativeLayout>
